<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offroader_background"
    tools:context=".ui.fragment.community.CommunityFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_community"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_default_height_material"
        android:layout_marginStart="-17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_chat_back"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_black"
                android:paddingVertical="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/iv_bot"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_bongbong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_bot_mbti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatbot_hikey"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/pretendard_semibold"
                app:layout_constraintTop_toBottomOf="@id/iv_bot"
                app:layout_constraintStart_toStartOf="@id/iv_bot"
                app:layout_constraintEnd_toEndOf="@id/iv_bot"/>

            <Spinner
                android:id="@+id/sp_bot"
                android:layout_width="65dp"
                android:layout_height="45dp"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/iv_bot"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="18dp"
                app:layout_constraintEnd_toEndOf="@id/iv_bot"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_clear_chat"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/chatbot_delete_history"
                android:gravity="center"
                android:textColor="@color/offroader_description"
                android:textSize="12sp"
                android:paddingHorizontal="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="#DCDCDC"
        app:layout_constraintTop_toBottomOf="@id/tb_community"/>

    <ImageView
        android:id="@+id/iv_chat_bg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_chat_bg"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="1dp"/>

    <TextView
        android:id="@+id/tv_chat_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="하이키에게 등산 관련 질문은 해보세요!"
        app:layout_constraintTop_toBottomOf="@id/iv_chat_bg"
        app:layout_constraintStart_toStartOf="@id/iv_chat_bg"
        app:layout_constraintEnd_toEndOf="@id/iv_chat_bg"
        android:fontFamily="@font/pretendard_bold"
        android:layout_marginTop="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chatbot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@id/div_1"
        tools:listitem="@layout/item_chatbot" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/v_divider_bottom"
            style="@style/Divider.Horizontal.Grey" />

        <EditText
            android:id="@+id/et_ask"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@color/transparent"
            android:gravity="bottom"
            android:hint="@string/chatbot_ask_hint"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


<!--    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/v_divider_bottom"
            style="@style/Divider.Horizontal.Grey" />

        <EditText
            android:id="@+id/et_ask"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:gravity="bottom"
            android:hint="@string/chatbot_ask_hint"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textSize="16sp" />

    </LinearLayout>-->


